--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "2.4.9",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "1-crud": "file:..",
     "framer-motion": "^10.18.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
